fix: contrast tool - add color value

--- a/src/themes/high-contrast.css
+++ b/src/themes/high-contrast.css
@@ -5,6 +5,7 @@
     --bs-emphasis-color: #0ff;
     --bs-link-color: #ff0;
     --bs-link-hover-color: #ff0;
+    --bs-border-color-translucent: #ff0;
     /* OpenLayers */
     --ol-background-color: #000;
     --ol-subtle-background-color: #ff0;
